--- a/templates/base.html
+++ b/templates/base.html
@@ -4,16 +4,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport"
-                content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta name="mobile-web-app-capable" content="yes">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>{% block title %}{% endblock title %} | Coffee, Cake & Cycling</title>
 
-        <!-- Main CSS-->
-        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <!-- Extra CSS-->
+        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
         {% block extracss %}
         {% endblock extracss %}
     </head>
@@ -22,7 +19,6 @@
             {% block content %}
             {% endblock content %}
         </main>
-        <!-- Essential javascripts for application to work-->
         {% include 'js.html' %}
         {% block extrascripts %}
         {% endblock extrascripts %}
