--- a/templates/cafes/cafe_list.html
+++ b/templates/cafes/cafe_list.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
+{% load custom_filters %}
+
 {% block title %}Home{% endblock title %}
 
 {% block extracss %}{% endblock extracss %}
@@ -11,14 +14,27 @@
         <div class="col-lg-4 px-4 my-4">
             <div class="card">
                 <a href="{% url 'cafes:cafe_detail' id=cafe.google_place_id %}"><img src="{% static 'img/google/' %}{{ cafe.google_place_id }}.jpg" height="200" class="card-img-top" alt="Photo of {{ cafe.name }}"></a>
-                <div class="card-body">
+                <div class="card-body bg-primary text-light">
                     <h5 class="card-title">{{ cafe.name }}</h5>
-                    <p class="card-text">{{ cafe.rating }} <span>({{ cafe.number_of_ratings }})</span></p>
+                    <div class="row">
+                        <div class="col">
+                            {% for star in cafe.rating|star %}
+                                {% if star == 'f' %}
+                                <span class="fa-solid fa-star"></span>
+                                {% elif star == 'h' %}
+                                <span class="fa-regular fa-star star"></span>
+                                {% elif star == 'e' %}
+                                <span class="fa-regular fa-star"></span>
+                                {% endif %}
+                            {% endfor %}
+                            <span class="card-text">- {{ cafe.rating }} <span>({{ cafe.number_of_ratings }})</span></span>
+                        </div>
+                    </div>
                 </div>
                 <ul class="list-group list-group-flush">
                     {% for review in cafe.reviews.all|slice:":3" %}
                     <li class="list-group-item">
-                        <p>{{ review.title }} ({{ review.rating.rating }}) - {{ review.user }}</p>
+                        <p>{{ review.title }} ({{ review.rating.rating }}) - {{ review.user }} {{ review.date|timesince }} {% translate 'ago' %}</p>
                         <p>{{ review.content }}</p>
                     </li>
                     {% endfor %}
