--- a/templates/cafes/cafe_list.html
+++ b/templates/cafes/cafe_list.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load custom_filters %}
 
-{% block title %}Home{% endblock title %}
+{% block title %}Cafe list{% endblock title %}
 
 {% block extracss %}{% endblock extracss %}
 
