--- a/static/css/main.css
+++ b/static/css/main.css
@@ -124,7 +124,7 @@ body {
     margin: 10px;
     padding: 5px;
     font-family: Roboto, sans-serif;
-    font-size: large;
+    font-size: 1rem;
     font-weight: bold;
 }
 
