--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,18 @@
         {% endblock extracss %}
     </head>
     <body>
+        <header>
+            <nav class="navbar navbar-expand-lg bg-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="{% url 'cafes:index' %}">CCC</a>
+                    <a class="nav-link me-auto" href="{% url 'cafes:cafe_list' %}">Cafes</a>
+                    <form method="GET" action="{% url 'cafes:cafe_list' %}" class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" name="search" placeholder="Search cafes..." aria-label="Search">
+                        <button class="btn btn-outline" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    </form>
+                </div>
+            </nav>
+        </header>
         <main>
             {% block content %}
             {% endblock content %}
