--- a/templates/cafes/cafe_detail.html
+++ b/templates/cafes/cafe_detail.html
@@ -1,19 +1,63 @@
+<!-- TODO: Add cafe information, including location on Google Maps widget -->
+
 {% extends 'base.html' %}
 {% load static %}
+{% load i18n %}
+{% load custom_filters %}
+
 {% block title %}{{ cafe.name }}{% endblock title %}
 
 {% block extracss %}{% endblock extracss %}
 
 {% block content %}
 <div class="container">
-    <h1>{{ cafe.name }}</h1>
-    {% for review in cafe.reviews.all %}
-    <p>{{ review.title }}</p>
-    <p>{{ review.rating }}</p>
-    <p>{{ review.user }}</p>
-    <p>{{ review.date }}</p>
-    <p>{{ review.content }}</p>
-    {% endfor %}
+    <div class="row g-0">
+        <div class="card m-3">
+            <a href="{% url 'cafes:cafe_detail' id=cafe.google_place_id %}"><img src="{% static 'img/google/' %}{{ cafe.google_place_id }}.jpg" class="cafe-card-img-top" alt="Photo of {{ cafe.name }}"></a>
+            <div class="card-body bg-primary text-light">
+                <h4 class="card-title">{{ cafe.name }}</h4>
+                <div class="row">
+                    <div class="col review-rating">
+                        {% for star in cafe.rating|star %}
+                            {% if star == 'f' %}
+                            <span class="fa-solid fa-star"></span>
+                            {% elif star == 'h' %}
+                            <span class="fa-regular fa-star star"></span>
+                            {% elif star == 'e' %}
+                            <span class="fa-regular fa-star"></span>
+                            {% endif %}
+                        {% endfor %}
+                        <span class="text-light" style="font-weight: 600;">- {{ cafe.rating|stringformat:'.1f' }} <span>({{ cafe.number_of_ratings }} ratings)</span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        {% for review in cafe.reviews.all %}
+        <div class="col-lg-4">
+            <div class="card py-2 px-3 m-3">
+                <span class="review-title">{{ review.title }}</span>
+                <p>
+                    <span class="review-rating">
+                    {% for star in review.rating.rating|star %}
+                        {% if star == 'f' %}
+                        <span class="fa-solid fa-star"></span>
+                        {% elif star == 'h' %}
+                        <span class="fa-regular fa-star star"></span>
+                        {% elif star == 'e' %}
+                        <span class="fa-regular fa-star"></span>
+                        {% endif %}
+                    {% endfor %}
+                    </span>
+                    <span class="review-user">- {{ review.user }}</span>
+                    <span class="review-date">({{ review.rating.date|custom_timesince }})</span>
+                </p>
+                <p class="review-content">{{ review.content }}</p>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 </div>
 {% endblock content %}
 
