--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-4" style="background-image: url(https://placehold.co/500);">
+        <div class="col-md-4">
             <div class="p-4 p-lg-5">
                 <h2 class="mb-4">Welcome to Coffee, Cake & Cycling!</h2>
             </div>
@@ -41,7 +41,7 @@
                         </div>
                     </form>
                     <div class="col-10 col-lg-9">
-                        <p>Don't have an account yet? Sign up here!</p>
+                        <a href="{% url 'users:register' %}">Don't have an account yet? Sign up here!</a>
                     </div>
                 </div>
             </div>
