--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-4" style="background-image: url(https://placehold.co/500);">
+        <div class="col-md-4">
             <div class="p-4 p-lg-5">
                 <h2 class="mb-4">Welcome to Coffee, Cake & Cycling!</h2>
             </div>
