--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,23 +45,23 @@ body {
 
 .cafe-card-img-top {
     width: 100%;
-    height: 40vw;
+    height: 20vh;
     object-fit: cover;
 }
 @media (min-width: 992px) {
     .cafe-card-img-top {
-        height: 15vw;
+        height: 30vh;
 }
 }
 
 .review-card-img-top {
     width: 100%;
-    height: 30vw;
+    height: 15vh;
     object-fit: cover;
 }
 @media (min-width: 992px) {
     .review-card-img-top {
-        height: 10vw;
+        height: 20vh;
 }
 }
 
@@ -109,12 +109,7 @@ body {
 
 
 #map {
-    height: 80vw;
-}
-@media (min-width: 992px) {
-    #map {
-        height: 30vw;
-}
+    height: 65vh;
 }
 
 #place-autocomplete-card {
